fixing some issues

--- a/Match-App/templates/base.html.twig
+++ b/Match-App/templates/base.html.twig
@@ -22,6 +22,8 @@
             
             <!-- Popup JS -->
             <script src="{{ asset('js/popup.js') }}?v={{ 'now'|date('YmdHi') }}"></script>
+
+            {{ encore_entry_script_tags('app') }}
             
             <!-- Global resource management -->
             <script>
